# basileus

./: CMakeLists.txt  LICENSE  README.md  TODO  basileus.conf.in  config.h.in
scripts/: gen-db-include.sh
src/: CMakeLists.txt  basileus-music-db.sql  basileus.c  basileus.h  cfg.c  cfg.h  configuration.c  configuration.h  logger.c  logger.h  main.c  md5.c  md5.h  mongoose.c  music_db.c  music_db.h  music_tag.h  music_tag_libav.c  music_tag_taglib.c  scheduler.c  scheduler.h  webserver.c  webserver.h  webserver_libevent.c  webserver_mongoose.c
src/test/: CMakeLists.txt  scheduler_test.c
www/: CMakeLists.txt  basileus.css  index.html
www/javascript/: core.js  ui.js
